PROJECT(D_DSM)

FILE(GLOB D_DSM_CPP_SRCS ${PROJECT_SOURCE_DIR}/*.cpp)
FILE(GLOB D_DSM_C_SRCS ${PROJECT_SOURCE_DIR}/*.c)
FILE(GLOB D_DSM_HDRS ${PROJECT_SOURCE_DIR}/*.h)

SET(D_DSM_SRCS ${D_DSM_CPP_SRCS} ${D_DSM_C_SRCS})

ADD_DEFINITIONS(-DD_DSM_EXPORTS)

INCLUDE(${AQSISTYPES_SOURCE_DIR}/export.cmake)
INCLUDE(${TEXLIB_SOURCE_DIR}/export.cmake)

INCLUDE_DIRECTORIES(${DDMANAGER_SOURCE_DIR})
INCLUDE_DIRECTORIES(${AQSIS_TIFF_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${AQSIS_ZLIB_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${AQSIS_FLTK_INCLUDE_DIR})

ADD_LIBRARY(d_dsm SHARED ${D_DSM_SRCS})
# Generate the display declaration for the aqsisrc file.
GET_TARGET_PROPERTY(LOCOFDISPLAY d_dsm LOCATION)
GET_FILENAME_COMPONENT(DISPLAYLIB ${LOCOFDISPLAY} NAME)

SET(LINKLIBS ${AQSIS_TIFF_LIBRARIES} ${AQSIS_ZLIB_LIBRARIES} ${AQSIS_FLTK_LIBRARIES} ${AQSIS_DISPLAY_SYSTEM_LINKLIBS})
INCLUDE(${AQSISTYPES_SOURCE_DIR}/link.cmake)

TARGET_LINK_LIBRARIES(d_dsm ${LINKLIBS})

INSTALL(TARGETS d_dsm
		RUNTIME DESTINATION ${DISPLAYSDIR}
		LIBRARY DESTINATION ${DISPLAYSDIR}
		ARCHIVE DESTINATION ${LIBDIR})
